@@ -57,7 +57,7 @@ enum { CARTRIDGE_UNKNOWN        = -1,
        CARTRIDGE_ATRAX_SDX_128  = 49,
        CARTRIDGE_TURBOSOFT_64   = 50,
        CARTRIDGE_TURBOSOFT_128  = 51,
-       CARTRIDGE_MICROCALC_32   = 52,
+       CARTRIDGE_ULTRACART_32   = 52,
        CARTRIDGE_LAST_SUPPORTED = 52
 };
 
