@@ -1,3 +1,9 @@
+2012-03-29  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
+* cartridge.[ch], ui.c, atari800.man, DOC/cart.txt: Renamed MicroCalc
+  cartridge mapping to Ultracart - that's the name printed at the cartridge's
+  PCB.
+
+
 2012-03-26  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
 * cartridge.[ch], ui.c, atari800.man, DOC/cart.txt, DOC/USAGE: Added support
   for the MicroCalc cartridge mapping.
